force-app/main/default/objects/Hoja_de_Calificaci_n__c/Hoja_de_Calificaci_n__c.object-meta.xml
<CustomObject>
    <description>Determina el análisis de la política comercial para la oportunidad.</description>
    <label>Hoja de Calificación Política Comercial</label>
    <nameField>
        <label>Hoja de Calificación  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hojas de Calificación Política Comercial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>