force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Acceso_a_Tomadores_Influenciadores__c.field-meta.xml
<CustomField>
    <fullName>Acceso_a_Tomadores_Influenciadores__c</fullName>
    <inlineHelpText>¿Conocemos las personas que toman e influencian la decisión  dentro del proceso? Sea: 1. Ninguno. 2. Casi Ninguno. 3. Parcialmente. 4. Casi Todos. 5. Todos.</inlineHelpText>
    <label>Acceso a Influenciadores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ScoringHojasCalculo</valueSetName>
    </valueSet>
</CustomField>