force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Atractivo_de_la_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Atractivo_de_la_Oferta__c</fullName>
    <formula>(VALUE(TEXT( Tipo_de_Cliente__c ))*0.2+ VALUE( TEXT( Reconocimiento_P_blico_del_Proyecto__c ) )*0.2+ VALUE( TEXT( Cliente_con_M_ltiples_Negocios__c ) )*0.3+ VALUE( TEXT( Continuidad_del_Negocio__c ) )*0.3)*20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atractivo de la Oferta</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>