force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Calificaci_n_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n_de_Oportunidad__c</fullName>
    <formula>Atractivo_de_la_Oferta__c*0.4+ Factibilidad_de_Ejecuci_n_de_Oferta__c*0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calificación de Oportunidad</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>