force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Cliente_con_M_ltiples_Negocios__c.field-meta.xml
<CustomField>
    <fullName>Cliente_con_M_ltiples_Negocios__c</fullName>
    <inlineHelpText>¿Hay mas proyectos con este cliente? Sea: 1. No. 2. Una Oportunidad. 3. Dos Oportunidades. 4. Tres Oportunidades. 5. Cuatro o más Oportunidades.</inlineHelpText>
    <label>Cliente con Múltiples Negocios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ScoringHojasCalculo</valueSetName>
    </valueSet>
</CustomField>