force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Continuidad_del_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Continuidad_del_Negocio__c</fullName>
    <inlineHelpText>¿Puede traer continuidad del negocio dentro de la solución holística?  (Renting, Retrofit, Monitoreo, o Mantenimiento) Sea: 1. No. 3. Quizás. 5. Seguro.</inlineHelpText>
    <label>Continuidad del Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>