force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Cuantificaci_n_de_Riesgos__c.field-meta.xml
<CustomField>
    <fullName>Cuantificaci_n_de_Riesgos__c</fullName>
    <inlineHelpText>¿El proyecto representa alto riesgo reputacional, legal, o económico? Sea: 1. Muy Alto. 2. Alto. 3. Medio. 4. Bajo. 5. Muy Bajo.</inlineHelpText>
    <label>Cuantificación de Riesgos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ScoringHojasCalculo</valueSetName>
    </valueSet>
</CustomField>