force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Decisi_n__c.field-meta.xml
<CustomField>
    <fullName>Decisi_n__c</fullName>
    <formula>IF( Calificaci_n_de_Oportunidad__c &gt;=85, &quot;CALIFICADA CON PRIORIDAD&quot;,  IF(Calificaci_n_de_Oportunidad__c&lt;85 &amp;&amp; Calificaci_n_de_Oportunidad__c &gt;=70 , &quot;CALIFICADA&quot;,  IF(Calificaci_n_de_Oportunidad__c&lt;70 &amp;&amp; Calificaci_n_de_Oportunidad__c &gt;=60, &quot;CALIFICADA CON ADVERTENCIA&quot;, &quot;DESCARTADA&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decisión</label>
    <type>Text</type>
</CustomField>