force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Descarte__c.field-meta.xml
<CustomField>
    <fullName>Descarte__c</fullName>
    <formula>CASE(
Decisi_n__c ,
&quot;DESCARTADA&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/068Hn00000R9gdl&quot;, &quot;Rojo&quot;, 30, 30),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descarte</label>
    <type>Text</type>
</CustomField>