force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Expectativa_de_Margen__c.field-meta.xml
<CustomField>
    <fullName>Expectativa_de_Margen__c</fullName>
    <inlineHelpText>¿Cuál es la orientación del cliente para la toma de decisiones? Sea: 1. Sólo Precio. 2. Más Precio que Calidad. 3. 50/50. 4. Más Calidad que Precio. 5. Calidad.</inlineHelpText>
    <label>Expectativa de Margen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ScoringHojasCalculo</valueSetName>
    </valueSet>
</CustomField>