force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Factibilidad_de_Ejecuci_n_de_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Factibilidad_de_Ejecuci_n_de_Oferta__c</fullName>
    <formula>( VALUE( TEXT( Expectativa_de_Margen__c ) )*0.2+ VALUE( TEXT(  Cuantificaci_n_de_Riesgos__c ) )*0.15+VALUE( TEXT(  Tipo_de_Soluci_n_a_Implementar__c ) )*0.1+VALUE( TEXT(  Posici_n_Respecto_a_Competencia__c ) )*0.1+VALUE( TEXT(  Regi_n_Geogr_fica__c ) )*0.15+VALUE( TEXT(  Acceso_a_Tomadores_Influenciadores__c  ) )*0.15+VALUE( TEXT(  Tomadores_Iinfliuenciadores_Adversos__c ) )*0.15)*20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factibilidad de Ejecución de Oferta</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>