force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Imagen_calificada__c.field-meta.xml
<CustomField>
    <fullName>Imagen_calificada__c</fullName>
    <formula>CASE(
     Decisi_n__c ,
    &quot;CALIFICADA&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/068Hn00000R9gdq&quot;, &quot;Verde&quot;, 30, 30),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen calificada</label>
    <type>Text</type>
</CustomField>