force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Imagen_calificada_con_advertencia__c.field-meta.xml
<CustomField>
    <fullName>Imagen_calificada_con_advertencia__c</fullName>
    <formula>CASE(
     Decisi_n__c ,
    &quot;CALIFICADA CON ADVERTENCIA&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/068Hn00000R9qhP&quot;, &quot;Azul&quot;, 30, 30),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen calificada con advertencia</label>
    <type>Text</type>
</CustomField>