force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Imagen_calificada_con_prioridad__c.field-meta.xml
<CustomField>
    <fullName>Imagen_calificada_con_prioridad__c</fullName>
    <formula>CASE(
Decisi_n__c ,
&quot;CALIFICADA CON PRIORIDAD&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/068Hn00000R9gRc&quot;, &quot;Amarillo&quot;, 30, 30),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen calificada con prioridad</label>
    <type>Text</type>
</CustomField>