force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Hojas_de_Calificaciones_Pol_tica_Comerci</relationshipName>
    <type>Lookup</type>
</CustomField>