force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Posici_n_Respecto_a_Competencia__c.field-meta.xml
<CustomField>
    <fullName>Posici_n_Respecto_a_Competencia__c</fullName>
    <inlineHelpText>¿Cuál es nuestra posición respecto a los demás competidores de la oportunidad? Sea: 1. Posición Desfavorable. 3. Igualdad de Condiciones. 5. Ventaja Competitiva.</inlineHelpText>
    <label>Posición Respecto a Competencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>