force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Precauciones_a_Tener_en_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Precauciones_a_Tener_en_Cuenta__c</fullName>
    <inlineHelpText>Si la oferta sale calificada con advertencia, ¿Cuáles son las precauciones a tener en cuenta, y cuales son los obstáculos a vencer?</inlineHelpText>
    <label>Precauciones a Tener en Cuenta</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>