force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Reconocimiento_P_blico_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Reconocimiento_P_blico_del_Proyecto__c</fullName>
    <inlineHelpText>¿El proyecto tiene conocimiento publico y por tanto sirve como herramienta de visibilización estratégica/comercial? Sea: 1. Desapercibido. 3. Medianamente Conocido. 5. Emblemático.</inlineHelpText>
    <label>Reconocimiento Público del Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>