force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Regi_n_Geogr_fica__c.field-meta.xml
<CustomField>
    <fullName>Regi_n_Geogr_fica__c</fullName>
    <inlineHelpText>¿El lugar de ejecución cumple con la política comercial? Sea: 1. No. 5. Sí.</inlineHelpText>
    <label>Región Geográfica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>