force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <inlineHelpText>¿Qué tipo de cliente está gestionando la oportunidad? Sea: 3. Intermediario. 5. Cliente Final.</inlineHelpText>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>