force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Tipo_de_Soluci_n_a_Implementar__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Soluci_n_a_Implementar__c</fullName>
    <inlineHelpText>¿La solución a implementar esta dentro de nuestro campo de experiencia? Sea: 1, No. 3. Parcialmente.5. Sí.</inlineHelpText>
    <label>Tipo de Solución a Implementar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>