force-app/main/default/objects/Hoja_de_Calificaci_n__c/fields/Tomadores_Iinfliuenciadores_Adversos__c.field-meta.xml
<CustomField>
    <fullName>Tomadores_Iinfliuenciadores_Adversos__c</fullName>
    <inlineHelpText>¿Hay personas dentro de la toma de decisión que puedan ser un contrapeso para la empresa? Sea: 1. Todos. 2. Casi Todos. 3. Parcialmente. 4. Casi Ninguno. 5. Ninguno.</inlineHelpText>
    <label>Influenciadores Adversos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ScoringHojasCalculo</valueSetName>
    </valueSet>
</CustomField>